--- a/app/views/movies/show_gladiator.html.erb
+++ b/app/views/movies/show_gladiator.html.erb
@@ -1,8 +1,10 @@
-<h1>Gladiator</h1>
+<h1><%= @title %></h1>
+<h2><%= @subtitle %></h2>
+
 
 <h3>Gladiator 'Are You Not Entertained' Scene</h3>
 
 <iframe width="420" height="315" src="//www.youtube.com/embed/FI1ylg4GKv8" frameborder="0" allowfullscreen></iframe>
 
-<p>Crowe shows everyone what's up.</p>
-
+<p><%= @description %></p>
+<p><%= @video_id %></p>
