--- a/app/views/movies/show_matilda.html.erb
+++ b/app/views/movies/show_matilda.html.erb
@@ -1,7 +1,8 @@
-<h1>Matilda</h1>
+<h1><%= @title %></h1>
 
-<h3>Bruce's brownie scene</h3>
+<h3><%= @subtitle %></h3>
 
 <iframe width="420" height="315" src="//www.youtube.com/embed/EVWOQwZENBg" frameborder="0" allowfullscreen></iframe>
 
-<p>This movie is just great. Who agrees?</p>
+<p><%= @description %></p>
+<p><%= @video_id %>
